[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Mouse_icon.png" type="Texture" id=2]
[ext_resource path="res://Textures/Jumpscare.jpeg" type="Texture" id=3]
[ext_resource path="res://Sounds/Jumpscare.mp3" type="AudioStream" id=4]
[ext_resource path="res://Merriweather-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://XanhMono-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.2
height = 0.8

[sub_resource type="CapsuleMesh" id=2]
radius = 0.2
mid_height = 0.8

[sub_resource type="CapsuleShape" id=3]
radius = 0.196908

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
Button/styles/disabled = SubResource( 5 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 37
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 90
font_data = ExtResource( 6 )

[node name="Player" type="KinematicBody"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.6, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.607399, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41029e-10, 0.00322628 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CollisionShape"]

[node name="CameraNode" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.976502, 0 )

[node name="Camera" type="Camera" parent="CameraNode"]
transform = Transform( -1.42857, 0, 1.07049e-07, 0, 1.42857, 0, -1.2489e-07, 0, -1.66667, 0, 0.0526454, 0 )
current = true

[node name="Interagindo_local" type="Position3D" parent="CameraNode"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.31023 )

[node name="Area" type="Area" parent="CameraNode"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="CameraNode/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.01581 )
shape = SubResource( 3 )

[node name="InteragirIcon" type="Sprite3D" parent="."]
transform = Transform( 0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 0, 0, 0 )
visible = false
texture = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Jumpscare" type="TextureRect" parent="Canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="Carta" type="Control" parent="Canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Canvas/Carta"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.5
margin_top = -319.0
margin_right = 242.5
margin_bottom = 319.0

[node name="RichTextLabel" type="RichTextLabel" parent="Canvas/Carta/ColorRect"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = -285.0
margin_right = 206.5
margin_bottom = 24.0
text = "Diario de exploração, nota 37

A gente chegou na cidade a poucos dias e fomos pegar informações sobre a mina abandonada.
Segundo os cidadãos, muitos gritos podem ser escutados durante a madrugada, tanto de homens tanto de mulheres.


Nota 38

Encontramos uma senhora que diz que seu filho entrou na caverna e não voltou, isso foi ontem, talvez a gente consiga salva-lo ainda.


Nota 39

Eu e Alice estamos com todo o equipamento e marcações para explorar a caverna, vai ser um pouco complicado mas não vai ser algo novo para nós.



"
scroll_active = false

[node name="Label" type="Label" parent="Canvas/Carta/ColorRect"]
modulate = Color( 0.705882, 0.0509804, 0.0509804, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.5
margin_top = 22.0
margin_right = 196.5
margin_bottom = 303.0
text = "ELA SUMIU
EU OUVI ELA GRITAR
ALICE NÃO VOLTOU
ALICE NÃO VOLTOU
ALICE NÃO VOLTOU
ALICE NÃO VOLTOU
ALICE NÃO VOLTOU

ALICE NUNCA VAI VOLTAR DE LÁ
ACABOU TUDO
SEU GRITO NÃO PARA DE ECOAR DENTRO DA MINHA CABEÇA
ALICE NÃO VOLTOU
"
align = 1
valign = 1

[node name="JumpscareSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 8.0

[node name="EndScreen" type="CanvasLayer" parent="."]

[node name="Fundo" type="ColorRect" parent="EndScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="Obrigado" type="Label" parent="EndScreen/Fundo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.5
margin_top = -57.0
margin_right = 231.5
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "Obrigado por jogarem essa demo!
Espero que todos da Uninter
tenham um ótimo dia."
align = 1
valign = 1

[node name="JogarNovamente" type="Button" parent="EndScreen/Fundo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = 140.0
margin_right = 104.5
margin_bottom = 185.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "para o menu"

[node name="End" type="Label" parent="EndScreen/Fundo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -210.0
margin_right = 67.5
margin_bottom = -102.0
custom_fonts/font = SubResource( 8 )
text = "END"

[connection signal="area_entered" from="CameraNode/Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="CameraNode/Area" to="." method="_on_Area_area_exited"]
[connection signal="finished" from="JumpscareSound" to="." method="_on_JumpscareSound_finished"]
[connection signal="pressed" from="EndScreen/Fundo/JogarNovamente" to="." method="_on_JogarNovamente_pressed"]
